--- a/Numpy and Pandas.ipynb
+++ b/Numpy and Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOHSUv7jnoeitZ2j9QOSX1",
+      "authorship_tag": "ABX9TyNpWIxAvkJ9KoCCjk6r46R1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "mabSNEU22f5w"
+        "id": "mabSNEU22f5w",
+        "outputId": "d8eafc27-fb0c-4c51-f834-95fa8669a047",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Github\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hello Github\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uUocCt6N4kmI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
